--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/chat.js"></script>
+    <script src="./chat.js"></script>
 </body>
 
 </html>
